.. $Id: RELEASE_NOTES  79391 2011-10-10 olivas $
.. $Author: mzoll $
.. $Date: 2011-10-10 $

Release Notes
=============

Nov 20, 2018 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
--------------------------------------------------------------------
Release V03-03-01
* bugfix: fixes typo in example. closes #2154
* allow passing of a GCD file and Start/End MJD 

Nov 3, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
--------------------------------------------------------------------
Release V03-03-00
* Updated scripts. Also see March 14th, 2017 notes

March 14th, 2017 Marcel Zoll (marcel.zoll@fysik.su.se)
--------------------------------------------------------------------
- python 3 compat
  -- KJ Meager
- use serialization project
  -- Chris Weaver
- docstring fixes
  -- KJ Meager
- add nexplicit namespace for std::inf and std::isnan
  -- David Schultz
- switch to astro instead of coordinate service
  -- KJ Meager

Oct 1st, 2015 Marcel Zoll (marcel.zoll@fysik.su.se)
--------------------------------------------------------------------
* fixed some spelling errors
* fix documentation warnings
* move I3WimpParams out to simclasses; include converters
* adapt to new I3MCTree dataclasses interface to most energetic particles
* adapted test-script to the use of astro instead of coordinate-service
  -- Marcel Zoll

Oct 29, 2014  Marcel Zoll (marcel.zoll@fysik.su.se)
--------------------------------------------------------------------

* Made the neutrino be produced at the position of its source (Sun/Earth) and interact at time=0.
* Adapted tests accordingly
* Made the execution of a test that depended on coordinate-service execute conditionally

Oct 10, 2014  Marcel Zoll (marcel.zoll@fysik.su.se)
--------------------------------------------------------------------
